2001-07-27  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Makefile.win32, README.win32: Travis' changes for latest mingw

2001-07-27  Jeff Freedman  <jeff@amy.nerble.net>

	* Fixed Usecode bug I caused with change to get_elem().
	* Fixed crash in reflect.  Also, num_shapes is returned as the
	original #, not counting reflected shapes.

2001-07-27  Patrick Burke  <takhisisii@yahoo.com.au>

	* usecode/ucxt/*.[cc|h]: rewrote entire usecode file parser inherited
	from ucdump, twice as slow, but it's maintainable.

	* docs/usecode_ff.txt: Added a quick and dirty BNF overview of the
	USECODE file format that was generated whilst rewriting the above.
	It should be correct, maybe just not understandable.

2001-07-26  Tristan Tarrant <nadir@users.sourceforge.net>
	* exult.cc, game.cc, game.h: implement "Return to menu" functionality
	* files/IFF.cc, files/utils.cc: clean up some printouts
	* gumps/VideoOptions_gump.cc: converted to use the expack-generated 
	EXULT_FLX_* constants
	* shapes/font.*: release memory on deallocation of fonts
	* shapes/vgafile.*: allow reuse of shape objects for different files

2001-07-26  Patrick Burke  <takhisisii@yahoo.com.au>

	* usecode/siintrinsics.h: lacked UNKNOWN opcode definitions for
	0xf7...0xff causing eldritch errors in ucxt.

	* usecode/ucxt/Docs/opcodes.txt: updated to note AIDX change.

2001-07-26  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc (Actor): Approach_avatar() only waits at most 1/10
	sec. now, just enough time for NPC to step to edge of screen.

	* objs/contain.cc (Container_game_object): find_item() checks
	quality.  This fixes the disappearing key bug.

2001-07-26  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* ucinternal.cc: fixed AIDX opcode (keyring works again)

2001-07-26  Patrick Burke <takhisisii@yahoo.com.au>
	* usecode/ucxt/*.[cc|h]: integration with exult .xml config file;
	proto-integration with opcodes.txt data file; replaced all legacy
	FILE* with C++ iostreams.