@@ -24,13 +24,14 @@ class Game_clock : public Time_sensitive
 	short hour, minute;		// Time (0-23, 0-59).
 	int day;			// Keep track of days played.
 	int light_source_level;		// Light source level.
+	int storm;			// >0 if storm in progress.
 	unsigned short time_rate;
 	void set_time_palette();
 	void set_light_source_level(int lev);
 	void check_hunger();
 public:
 	Game_clock(Time_queue *tq) : tqueue(tq), hour(6), minute(0), day(0),
-			light_source_level(0), time_rate(1)
+			light_source_level(0), storm(0), time_rate(1)
 		{ }
 	int get_hour()
 		{ return hour; }
@@ -56,6 +57,7 @@ public:
 		if (lev != light_source_level)
 			set_light_source_level(lev);
 		}
+	void set_storm(bool onoff);	// Start/end storm.
 	void increment(int num_minutes);// Increment clock.
 	virtual void handle_event(unsigned long curtime, long udata);
 	void fake_next_period();	// For debugging.
